ドキュメントルートのパーミッション調整

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,12 +3,12 @@
   become: true
   user: ec2-user
   roles:
-    - common/hostname
-    - common/selinux
-    - common/timezone    
-    - common/swap
-    - common/user_add
-    - common/yum_update
-    - mysql
+    # - common/hostname
+    # - common/selinux
+    # - common/timezone    
+    # - common/swap
+    # - common/user_add
+    # - common/yum_update
+    # - mysql
     - nginx
-    - php
+    # - php
